--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -173,7 +173,7 @@
                                         <img class="rounded-circle" th:src="*{profilePicture}" onerror="this.src='https://cdn.dribbble.com/users/2620325/screenshots/6699707/2-01_2x.jpg'" style="width: 50px; height: 50px;" alt="">
                                         <br>
                                         <h6 class="pt-2 text-uppercase" th:text="*{name}"> Administrator</h6>
-                                
+                                        <span id="user_id" class="d-none" th:text="*{id}"></span>
                                     </div>
                             </div>
                             <div class="card-body">
