--- a/Controller/src/main/resources/templates/admin/admin-feedback.html
+++ b/Controller/src/main/resources/templates/admin/admin-feedback.html
@@ -58,24 +58,24 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     <div th:class="${page.getTotalPages() < 2 ? 'd-none' : ''}">
         <nav aria-label="Page navigation example" class="">
             <ul class="pagination justify-content-center">
-                <li class="page-item">
+                <!-- <li class="page-item">
                     <a class="page-link" href="#" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
-                </li>
+                </li> -->
                 <li class="page-item " th:each="i : ${#numbers.sequence(1,page.getTotalPages() )}">
                     <a class="page-link" th:href="@{?(size=10,page=${i-1})}" th:text="${i}"></a>
                 </li>
                 <!-- <li class="page-item"><a class="page-link" href="?size=10">1</a></li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li> -->
-                <li class="page-item">
+                <!-- <li class="page-item">
                     <a class="page-link" href="#" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </nav>
     </div>
