--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -207,7 +207,7 @@
                 </a>
             </li>
             <li class="nav-item  d-none d-lg-block">
-                <a class="nav-link text-center text-dark" href="/contentByCategory">
+                <a class="nav-link text-center text-dark" href="/category">
                     <h5 th:class="${CURRENT_PAGE == 'category'}?'icon-linear-color page-active':'icon-linear-color'"  >Category</h5>
                 </a>
             </li>
@@ -287,42 +287,42 @@
                 </div>
             </li>
             <li class="nav-item "  sec:authorize="isAuthenticated()">
-                <div class="dropdown ">
+                <div class="dropdown "  th:object="${#authentication.getPrincipal().getCurrentUser()}">
 
                     <a class="nav-link text-center  d-none d-lg-block" href="#" id="profile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img class="" src="/icon/user-navbar-v2.svg" style="width: 30px; height: 30px;" alt="">
                     </a>
-                </div>
-                <div class="dropdown-menu dropdown-menu-customized dropdown-menu-right mt-3" aria-labelledby="profile">
-                    <div class="card border-0">
-                        <div class="card-title ">
-                                <div class="text-center pt-2">
-                                    <img class="rounded-circle" src="https://cdn.dribbble.com/users/2620325/screenshots/6699707/2-01_2x.jpg" style="width: 50px; height: 50px;" alt="">
-                                    <br>
-                                    <h6 class="pt-2"> Administrator</h6>
+               
+                    <div class="dropdown-menu dropdown-menu-customized dropdown-menu-right mt-3" aria-labelledby="profile">
+                        <div class="card border-0">
+                            <div class="card-title ">
+                                    <div class="text-center pt-2">
+                                        <img class="rounded-circle" th:src="*{profilePicture}"  onerror="this.src='https://cdn.dribbble.com/users/2620325/screenshots/6699707/2-01_2x.jpg'" style="width: 50px; height: 50px;" alt="">
+                                        <br>
+                                        <h6 class="pt-2" th:text="*{name}"> Administrator</h6>
 
-                                </div>
-                        </div>
-                        <div class="card-body">
-                            <b>BIO : <br> </b>
-                            <p class="px-4">
+                                    </div>
+                            </div>
+                            <div class="card-body">
+                                <b>BIO : <br> </b>
+                                <p class="px-4" th:text="*{bio}">
 
-                                Ben Arfa ចូល​រួម​ជាមួយ​ក្លឹប Ronaldo ក្រោយ​ខាន​លេង​បាល់​ជាង​កន្លះ​ឆ្នាំ
+                                    Ben Arfa ចូល​រួម​ជាមួយ​ក្លឹប Ronaldo ក្រោយ​ខាន​លេង​បាល់​ជាង​កន្លះ​ឆ្នាំ
 
-                            </p>
-                        </div>
+                                </p>
+                            </div>
 
-                        <div class="">
-                           <ul class="list-group list-group-flush border-top">
-                            <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin/customize';">Customize</li>
-                               <li class="list-group-item text-center click-list-user-profile" onclick="" data-toggle="modal" data-target="#requestModal" data-whatever="@mdo">Request</li>
-                            <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';">Admin</li>
-                            <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';">Logout</li>
-                           </ul>
+                            <div class="">
+                            <ul th:switch="*{getUserRole()}" class="list-group list-group-flush border-top">
+                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin/customize';">Customize</li>
+                                <li th:case="'CLIENT'" class="list-group-item text-center click-list-user-profile" onclick="" data-toggle="modal" data-target="#requestModal" data-whatever="@mdo">Request</li>
+                                <li th:case="'ADMIN'" class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';">Admin</lith:case="'CLIENT'">
+                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';">Logout</li>
+                            </ul>
+                            </div>
                         </div>
                     </div>
-                  </div>
-
+                </div>  
             </li>
             <li th:class="${#authorization.expression('isAuthenticated()') == true} ? 'd-none' : 'nav-item' ">
                 <a class="nav-link text-center text-dark" href="/login">
