Thursday Afternoon include favorite choose and redirect

--- a/Controller/src/main/resources/templates/clients/CategoryChoosen.html
+++ b/Controller/src/main/resources/templates/clients/CategoryChoosen.html
@@ -138,8 +138,9 @@
                             })
                         })
                 console.log(res)
-                let json = await res.json();  
-                console.log(json) 
+                // let json = await res.json();  
+                // console.log(json) 
+                location.href = "/home";
             } catch (error) {
                 console.log(error)
             }         
