--- a/Controller/src/main/resources/templates/fragment/__content_card.html
+++ b/Controller/src/main/resources/templates/fragment/__content_card.html
@@ -18,18 +18,16 @@
         <div class="text-center mw-50">
             <h5 class="text-white" th:text=${content.getTitle()}>
             </h5>
-            <span class="text-white content-timestamp" th:text="${content.getTimestamp()}">
-                Jul/2/2020
-            </span>
+            <span class="text-white content-timestamp" th:text="${content.getTimestamp()}"></span>
         </div>
     </div>
  
 </th:block>
 
 <th:block th:fragment="cardList" th:each="content: ${contents}">
-<div class="card" style="cursor: pointer;" th:onclick="'window.location.href = \'' + @{/detail/{id}(id=${content.getId()})} + '\''">
+<div class="card card_buttom" style="cursor: pointer;" th:onclick="'window.location.href = \'' + @{/detail/{id}(id=${content.getId()})} + '\''">
     <div class="card-header ">
-        <a class="rounded" style="padding-bottom: 3px" th:text="${content.getCategory().getName()}">Romance </a><span>&nbsp;-</span><span  class="content-timestamp" th:text="${content.getTimestamp()}"> May 13, 2018</span>
+        <a class="rounded" style="padding-bottom: 3px" th:text="${content.getCategory().getName()}">Romance </a><span>&nbsp;-</span><span  class="content-timestamp" th:text="${content.getTimestamp()}"></span>
         <h5 class="article-title-h5" th:text=${content.getTitle()}>How tech recognize human face</h5>
         <div class="mt-2 w-100 vh-30 " th:style="'background:url(' + @{${content.getThumbnail()}} +') no-repeat center;'+' background-size: cover;' ">
         </div>
@@ -42,7 +40,7 @@
             </p>
         </div>
     </div>
-    <div class="card-footer d-inline d-flex justify-content-between">
+    <div class="card-footer d-inline d-flex justify-content-between" style="background-color: transparent">
         <div>
             <sup>
                 <img class="" src="/icon/heart-pink.svg" style="width: 20px; height: 20px;" alt="">
@@ -52,7 +50,7 @@
                 <span class="kht-text-color-express" th:text=${cmts.get(content.getId())}>24</span>
             </sup>
         </div>
-        <div>
+        <div style="background-color: transparent">
             <a class="read-more-link-color" th:href="@{/detail/}+${content.getId()}" >Read More</a>
         </div>
     </div>
